--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Foodie's</title>
-    </head>
-    <body>
-        <div id="root"></div>
-    </body>
+  <head>
+    <title>Foodie's</title>
+  </head>
+  <body>
+    <div id="root"><h1>Welcome to the Foodie's Corner</h1></div>
+    <p></p>
+  </body>
+  <script type="module" src="App.js"></script>
 </html>
